--- a/https-everywhere-rules-base.cabal
+++ b/https-everywhere-rules-base.cabal
@@ -33,11 +33,11 @@ library
   other-modules:
     Paths_https_everywhere_rules_base
   build-depends:
-    base       >= 4.7 && < 4.8,
-    directory  >= 1.2 && < 1.3,
-    filepath   >= 1.3 && < 1.4,
-    text       >= 1.1 && < 1.2,
-    infix-fmap >= 0.0 && < 0.1
+    base          >= 4.7 && < 4.8,
+    directory     >= 1.2 && < 1.3,
+    filepath      >= 1.3 && < 1.4,
+    text          >= 1.1 && < 1.2,
+    functor-infix >= 0.0 && < 0.1
   hs-source-dirs:
     src
   ghc-options:
