--- a/https-everywhere-rules.cabal
+++ b/https-everywhere-rules.cabal
@@ -29,20 +29,21 @@ library
   other-modules:
     Data.HTTPSEverywhere.Rules.Internal,
     Data.HTTPSEverywhere.Rules.Internal.Parser,
-    Data.HTTPSEverywhere.Rules.Internal.Types
+    Data.HTTPSEverywhere.Rules.Internal.Types,
+    Data.Text.ICU.Extras
   build-depends:
-    base                       >= 4.7  && < 4.8,
-    attoparsec                 >= 0.12 && < 0.13,
-    http-client                >= 0.3  && < 0.4,
-    https-everywhere-rules-raw >= 4.0  && < 4.1,
-    text                       >= 1.1  && < 1.2,
-    pipes                      >= 4.1  && < 4.2,
-    errors                     >= 1.4  && < 1.5,
-    lens                       >= 4.3  && < 4.4,
-    functor-infix              >= 0.0  && < 0.1,
-    string-conversions         >= 0.3  && < 0.4,
-    text-icu                   >= 0.6  && < 0.7,
-    taggy-lens                 >= 0.1  && < 0.2
+    base               >= 4.7  && < 4.8,
+    attoparsec         >= 0.12 && < 0.13,
+    http-client        >= 0.3  && < 0.4,
+    text               >= 1.1  && < 1.2,
+    pipes              >= 4.1  && < 4.2,
+    errors             >= 1.4  && < 1.5,
+    lens               >= 4.3  && < 4.4,
+    functor-infix      >= 0.0  && < 0.1,
+    string-conversions >= 0.3  && < 0.4,
+    text-icu           >= 0.6  && < 0.7,
+    taggy-lens         >= 0.1  && < 0.2,
+    https-everywhere-rules-raw
   hs-source-dirs:
     src
   default-language:
