Use more structured URI representation; targets match only hosts.
This resolves #2.

--- a/https-everywhere-rules.cabal
+++ b/https-everywhere-rules.cabal
@@ -38,6 +38,7 @@ library
     functor-infix      >= 0.0  && < 0.1,
     http-client        >= 0.3  && < 0.4,
     lens               >= 4.3  && < 4.4,
+    network            >= 2.5  && < 2.6,
     pipes              >= 4.1  && < 4.2,
     string-conversions >= 0.3  && < 0.4,
     taggy-lens         >= 0.1  && < 0.2,
@@ -62,6 +63,7 @@ test-suite spec
     hspec              >= 1.10 && < 1.11,
     http-client        >= 0.3  && < 0.4,
     lens               >= 4.3  && < 4.4,
+    network            >= 2.5  && < 2.6,
     pipes              >= 4.1  && < 4.2,
     string-conversions >= 0.3  && < 0.4,
     taggy-lens         >= 0.1  && < 0.2,
