--- a/https-everywhere-rules.cabal
+++ b/https-everywhere-rules.cabal
@@ -36,13 +36,14 @@ library
     attoparsec         >= 0.12 && < 0.13,
     errors             >= 1.4  && < 1.5,
     functor-infix      >= 0.0  && < 0.1,
-    http-client        >= 0.3  && < 0.4,
-    lens               >= 4.3  && < 4.4,
-    network            >= 2.5  && < 2.6,
+    http-client        >= 0.3  && < 0.5,
+    lens               >= 4.3  && < 4.6,
+    network            >= 2.6  && < 2.7,
+    network-uri        >= 2.6  && < 2.7,
     pipes              >= 4.1  && < 4.2,
     string-conversions >= 0.3  && < 0.4,
     taggy-lens         >= 0.1  && < 0.2,
-    text               >= 1.1  && < 1.2,
+    text               >= 1.1  && < 1.3,
     text-icu           >= 0.6  && < 0.8,
     https-everywhere-rules-raw
   hs-source-dirs:
@@ -60,14 +61,15 @@ test-suite spec
     attoparsec         >= 0.12 && < 0.13,
     errors             >= 1.4  && < 1.5,
     functor-infix      >= 0.0  && < 0.1,
-    hspec              >= 1.10 && < 1.12,
-    http-client        >= 0.3  && < 0.4,
-    lens               >= 4.3  && < 4.4,
-    network            >= 2.5  && < 2.6,
+    hspec              >= 2.0  && < 2.1,
+    http-client        >= 0.3  && < 0.5,
+    lens               >= 4.3  && < 4.6,
+    network            >= 2.6  && < 2.7,
+    network-uri        >= 2.6  && < 2.7,
     pipes              >= 4.1  && < 4.2,
     string-conversions >= 0.3  && < 0.4,
     taggy-lens         >= 0.1  && < 0.2,
-    text               >= 1.1  && < 1.2,
+    text               >= 1.1  && < 1.3,
     text-icu           >= 0.6  && < 0.8,
     https-everywhere-rules-raw
   main-is:
