--- a/https-everywhere-rules-raw.cabal
+++ b/https-everywhere-rules-raw.cabal
@@ -33,7 +33,7 @@ library
   other-modules:
     Paths_https_everywhere_rules_raw
   build-depends:
-    base          >= 4.7 && < 4.8,
+    base          >= 4.6,
     directory     >= 1.2 && < 1.3,
     filepath      >= 1.3 && < 1.4,
     text          >= 1.1 && < 1.3,
