Don't admit package-wise parameterisation of rulesets.
As 'a6f28e07a1edc8f62f3dfaf7965b3a818c2f4a7f' showed, there may be
breaking changes in the structure of rulesets between releases. I
don't intend to verify that every pair in the product works (is there
reason to be interested in any other than the latest?), so let's not
acommodate any more than one.

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,4 @@
-[submodule "https-everywhere-rules-raw/vendor/https-everywhere"]
-	path   = https-everywhere-rules-raw/vendor/https-everywhere
+[submodule "vendor/https-everywhere"]
+	path = vendor/https-everywhere
 	url    = https://git.torproject.org/https-everywhere.git
 	branch = 4.0
