--- a/https-everywhere-rules.cabal
+++ b/https-everywhere-rules.cabal
@@ -22,6 +22,10 @@ extra-source-files:
   README.md
 cabal-version:
   >=1.10
+data-dir:
+  vendor/https-everywhere/src/chrome/content/rules
+data-files:
+  *.xml
 
 library
   exposed-modules:
@@ -29,12 +33,16 @@ library
   other-modules:
     Data.HTTPSEverywhere.Rules.Internal,
     Data.HTTPSEverywhere.Rules.Internal.Parser,
+    Data.HTTPSEverywhere.Rules.Internal.Raw,
     Data.HTTPSEverywhere.Rules.Internal.Types,
-    Data.Text.ICU.Extras
+    Data.Text.ICU.Extras,
+    Paths_https_everywhere_rules
   build-depends:
     base               >= 4.7  && < 4.9,
     attoparsec         >= 0.12 && < 0.13,
+    directory          >= 1.2  && < 1.3,
     errors             >= 1.4  && < 2.1,
+    filepath           >= 1.3  && < 1.5,
     functor-infix      >= 0.0  && < 0.1,
     http-client        >= 0.3  && < 0.5,
     lens               >= 4.3  && < 4.13,
@@ -44,8 +52,7 @@ library
     string-conversions >= 0.3  && < 0.5,
     taggy-lens         >= 0.1  && < 0.2,
     text               >= 1.1  && < 1.3,
-    text-icu           >= 0.6  && < 0.8,
-    https-everywhere-rules-raw
+    text-icu           >= 0.6  && < 0.8
   hs-source-dirs:
     src
   default-language:
@@ -59,7 +66,9 @@ test-suite spec
   build-depends:
     base               >= 4.7  && < 4.9,
     attoparsec         >= 0.12 && < 0.13,
+    directory          >= 1.2  && < 1.3,
     errors             >= 1.4  && < 2.1,
+    filepath           >= 1.3  && < 1.5,
     functor-infix      >= 0.0  && < 0.1,
     hspec              >= 2.0  && < 2.2,
     http-client        >= 0.3  && < 0.5,
@@ -70,8 +79,7 @@ test-suite spec
     string-conversions >= 0.3  && < 0.5,
     taggy-lens         >= 0.1  && < 0.2,
     text               >= 1.1  && < 1.3,
-    text-icu           >= 0.6  && < 0.8,
-    https-everywhere-rules-raw
+    text-icu           >= 0.6  && < 0.8
   main-is:
     Spec.hs
   hs-source-dirs:
@@ -83,3 +91,28 @@ test-suite spec
     -DTEST
   ghc-options:
     -Wall
+
+flag build-examples
+  description:
+    Whether to build the programs under "examples/".
+  default:
+    True
+  manual:
+    True
+
+executable redirect-proxy
+  hs-source-dirs:
+    examples
+  main-is:
+    RedirectProxy.hs
+  build-depends:
+    base >= 4.7  && < 4.9,
+    bytestring,
+    http-proxy,
+    http-types,
+    https-everywhere-rules,
+    network-uri,
+    wai
+  if !(flag(build-examples))
+    buildable:
+      False
