--- a/https-everywhere-rules.cabal
+++ b/https-everywhere-rules.cabal
@@ -79,7 +79,8 @@ test-suite spec
     string-conversions >= 0.3  && < 0.5,
     taggy-lens         >= 0.1  && < 0.2,
     text               >= 1.1  && < 1.3,
-    text-icu           >= 0.6  && < 0.8
+    text-icu           >= 0.6  && < 0.8,
+    https-everywhere-rules
   main-is:
     Spec.hs
   hs-source-dirs:
